logs/dag_id=Weather_DAG_V4.2/run_id=scheduled__2024-02-12T050100+0000/task_id=data_to_db/attempt=1.log
[2024-02-12T12:10:23.901+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Weather_DAG_V4.2.data_to_db scheduled__2024-02-12T05:01:00+00:00 [queued]>
[2024-02-12T12:10:23.952+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Weather_DAG_V4.2.data_to_db scheduled__2024-02-12T05:01:00+00:00 [queued]>
[2024-02-12T12:10:23.953+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 1
[2024-02-12T12:10:24.004+0000] {taskinstance.py:2191} INFO - Executing <Task(PostgresOperator): data_to_db> on 2024-02-12 05:01:00+00:00
[2024-02-12T12:10:24.018+0000] {standard_task_runner.py:60} INFO - Started process 11702 to run task
[2024-02-12T12:10:24.063+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'Weather_DAG_V4.2', 'data_to_db', 'scheduled__2024-02-12T05:01:00+00:00', '--job-id', '8496', '--raw', '--subdir', 'DAGS_FOLDER/Weather_dag.py', '--cfg-path', '/tmp/tmpwppuijog']
[2024-02-12T12:10:24.068+0000] {standard_task_runner.py:88} INFO - Job 8496: Subtask data_to_db
[2024-02-12T12:10:24.548+0000] {task_command.py:423} INFO - Running <TaskInstance: Weather_DAG_V4.2.data_to_db scheduled__2024-02-12T05:01:00+00:00 [running]> on host 06573eafe810
[2024-02-12T12:10:24.951+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='Weather_DAG_V4.2' AIRFLOW_CTX_TASK_ID='data_to_db' AIRFLOW_CTX_EXECUTION_DATE='2024-02-12T05:01:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-02-12T05:01:00+00:00'
[2024-02-12T12:10:24.953+0000] {sql.py:276} INFO - Executing: 
        LOAD DATA INFILE weather.csv 
        INTO TABLE weather_tab 
        FIELDS TERMINATED BY ',' 
        ENCLOSED BY '"'
        LINES TERMINATED BY 'n'
        IGNORE 1 ROWS
        
[2024-02-12T12:10:24.978+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-02-12T12:10:25.035+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-02-12T12:10:25.062+0000] {sql.py:450} INFO - Running statement: 
        LOAD DATA INFILE weather.csv 
        INTO TABLE weather_tab 
        FIELDS TERMINATED BY ',' 
        ENCLOSED BY '"'
        LINES TERMINATED BY 'n'
        IGNORE 1 ROWS
        , parameters: None
[2024-02-12T12:10:25.069+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 398, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 455, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "DATA"
LINE 2:         LOAD DATA INFILE weather.csv 
                     ^

[2024-02-12T12:10:25.117+0000] {taskinstance.py:1138} INFO - Marking task as FAILED. dag_id=Weather_DAG_V4.2, task_id=data_to_db, execution_date=20240212T050100, start_date=20240212T121023, end_date=20240212T121025
[2024-02-12T12:10:25.220+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 8496 for task data_to_db (syntax error at or near "DATA"
LINE 2:         LOAD DATA INFILE weather.csv 
                     ^
; 11702)
[2024-02-12T12:10:25.323+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-02-12T12:10:25.382+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
